<resources>
    <string name="app_name">Weed Wacker Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_name">Email\'iniz Giriniz</string>
    <string name="name_password">Şifrenizi Giriniz</string>
    <string name="name_login">Giriş</string>
    <string name="name_logo">Logo</string>
    <!--Customer dialog variable     -->
    <string name="customer_offer_dialog_workStartTime">İş Başlama</string>
    <string name="customer_offer_dialog_workEndTime">İş Bitiş</string>
    <string name="customer_offer_dialog_offerPrice">Teklifiniz</string>
    <string name="customer_offer_dialog_confirm">Onay</string>
    <string-array name="customer_offer_confirm_array">
        <item>Hayır</item>
        <item>Evet</item>
    </string-array>
    <!---->

    <!--Work Description Screen - Fragment    -->
    <string name="customer_adWork_description">İş Tanımı</string>

    <!---->
    <!--Setting Fragment-->
    <string-array name="city_array">
        <item>Kocaeli</item>
        <item>İstanbul</item>
    </string-array>
    <string-array name="district_array">
        <item>İzmit</item>
        <item>Derince</item>
    </string-array>
    <string-array name="neighbourhood_array">
        <item>Turgut</item>
        <item>Bulduk</item>
    </string-array>
    <string-array name="postCode_array">
        <item>41200</item>
        <item>41300</item>
    </string-array>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_tab_home">Home</string>
    <string name="name_tab_add_work">Add Work</string>
    <string name="name_tab_setting">Setting</string>
    <string name="name_offer">Verilen Teklif</string>
    <string name="add_work_name">İşinle ilgili bilgileri yazınız.</string>
    <string name="add_work_save">Kaydet</string>
    <string name="add_work_img">Add work Image Icon</string>
    <!---->
    <string-array name="offer_access_array">
        <item>Hayır</item>
        <item>Evet</item>
    </string-array>
</resources>